--- a/html/01_CourseInfo.html
+++ b/html/01_CourseInfo.html
@@ -7608,7 +7608,10 @@ o <strong>FLIPPED CLASSROOM</strong> (<a href="https://en.wikipedia.org/wiki/Fli
 <li>Il materiale sarà presentato in notebooks che dovranno essere scaricati e studiati <strong>prima</strong> delle lezioni</li>
 <li>Le lezioni verranno utilizzate per mettere in pratica i concetti appresi dai notebook attraverso esercizi, approfondimenti, attività di gruppo</li>
 <li>Durante le lezioni saranno presenti dei tutor per rispondere alle vostre domande</li>
-<li>I notebook sono disponibili e scaricabili sul mio sito: <a href="http://www.to.infn.it/~maina/didattica/TIF_2025">http://www.to.infn.it/~maina/didattica/TIF_2025</a> in formato html (sola lettura) e in formato ipynb (eseguibile). Si può scaricare l'intero tree da  <a href="https://github.com/mainaezio/TIF_2025_Introduction_to_Python.git">https://github.com/mainaezio/TIF_2025_Introduction_to_Python.git</a>.</li>
+<li>Si può scaricare tutto il materiale didattico da  <a href="https://github.com/mainaezio/TIF_2025_Introduction_to_Python.git">https://github.com/mainaezio/TIF_2025_Introduction_to_Python.git</a>.</li>
+<li>Scaricate i file in una nuova directory nella vostra <code>home</code></li>
+<li>Potrebbe essere utile crearne una seconda copia in una cartella indipendente da usare come area di lavoro.</li>
+<li><strong>I notebook sono strumenti interattivi non appunti da leggere. I comandi vanno eseguiti, modificati e compresi.</strong></li>
 </ul>
 </div>
 </div>
@@ -7620,8 +7623,7 @@ o <strong>FLIPPED CLASSROOM</strong> (<a href="https://en.wikipedia.org/wiki/Fli
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Valutazione">Valutazione<a class="anchor-link" href="#Valutazione">¶</a></h2><hr/>
-<ul>
+<h2 id="Valutazione">Valutazione<a class="anchor-link" href="#Valutazione">¶</a></h2><ul>
 <li>Il corso non ha voto finale. Approvato/Non approvato</li>
 <li>Alla fine di alcune sessioni in laboratorio una prova con alcuni esercizi. Valutati.</li>
 </ul>
@@ -7676,7 +7678,7 @@ o <strong>FLIPPED CLASSROOM</strong> (<a href="https://en.wikipedia.org/wiki/Fli
 <li>Non potete imparare a programmare mandando a memoria</li>
 <li>Imparate solo facendo. Fare significa sedersi al computer, battere i comandi e, provando e riprovando, farli funzionare, ottenendo il risultato corretto</li>
 <li>1 CFU equivale a 25 ore di impegno per lo studente di cui solo 8 sono di lezione.</li>
-<li>Molte delle abilità che svilupperete nello scrivere programmi, la capacità di analizzare un problema e di spezzarlo in elementi semplici, l'attenzione a tutti i dettagli, la capacità di rendersi conto se il risultato ottenuto è sensato e la capacità di trovare dove si è sbagliato se non lo è, sono le abilità necessarie per comprendere e risolvere qualsiasi problema fisico</li>
+<li>Molte delle abilità che svilupperete nello scrivere programmi, la capacità di analizzare un problema e di spezzarlo in elementi semplici, l'attenzione a tutti i dettagli, la capacità di rendersi conto e verificare se il risultato ottenuto è sensato e corretto, la capacità di trovare dove si è eventualmente sbagliato, sono le abilità necessarie per comprendere e risolvere qualsiasi problema fisico</li>
 </ul>
 </div>
 </div>
