--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@ Matrici di rotazione 3D con sympy (<A HREF="html/Rotations_3D_sympy.html" > .htm
 <li>
 Il quartetto di Anscombe: invito alla cautela nell'analisi statistica
 (<A HREF="html/anscombe.html" > .html </A>, <A HREF="ipynb/anscombe.ipynb" > .ipynb </A>)
+<li>
+Un esempio di simulazione Monte Carlo del passaggio di fotoni nella materia:
+(<A HREF="ipynb/Simulazione_MonteCarlo.ipynb" > .ipynb </A>)
 </UL>
 <P>
     <FONT SIZE="+1"><B>Cheatsheets riassuntivi:</B></FONT>
