--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ Il quartetto di Anscombe: invito alla cautela nell'analisi statistica
 (<A HREF="html/anscombe.html" > .html </A>, <A HREF="ipynb/anscombe.ipynb" > .ipynb </A>)
 <li>
 Un esempio di simulazione Monte Carlo del passaggio di fotoni nella materia:
-(<A HREF="ipynb/Simulazione_MonteCarlo.ipynb" > .ipynb </A>)
+(<A HREF="html/Simulazione_MonteCarlo.html" > .html </A>, <A HREF="ipynb/Simulazione_MonteCarlo.ipynb" > .ipynb </A>)
 </UL>
 <P>
     <FONT SIZE="+1"><B>Cheatsheets riassuntivi:</B></FONT>
