--- a/precorsoLinux_esercizi.html
+++ b/precorsoLinux_esercizi.html
@@ -38,7 +38,7 @@ Per gli utenti Windows "Aprire un terminale" deve essere inteso come aprire un t
     <LI> Verificate con <B>pwd</B> l'indirizzo della cartella home
     <LI> Digitate  in un browser http://www.to.infn.it/~maina/test_FileSystem/
     <LI> Cliccate con il tasto destro del mouse sul nome del file
-    <LI> Scegliete ''Salva con nome''. Il sistema vi propone una cartella in cui scaricare il file. Prendete nota di dove il file viene scaqricato.
+    <LI> Scegliete ''Salva con nome''. Il sistema vi propone una cartella in cui scaricare il file. Prendete nota di dove il file viene scaricato.
     <LI> Andate nella cartella home
     <LI> Create una nuova directory con il comando <B>mkdir precorso</B>
     <LI> copiate il file test_FileSystem.tar.gz dalla cartella in cui &egrave; stato scaricato alla cartella precorso. Pu&ograve; essere utile usare indirizzi assoluti.
