--- a/precorsoLinux.html
+++ b/precorsoLinux.html
@@ -130,7 +130,10 @@ Commenti e suggerimenti sono i benvenuti.
 <CENTER>
     <FONT SIZE="+3"><B>Esercizi per impratichirsi</B></FONT><BR>
 </CENTER>
-<A HREF="./precorsoLinux_esercizi.html">Esercizi</A>
+<P>
+Nella pagina
+<A HREF="./precorsoLinux_esercizi.html">precorsoLinux_esercizi.html</A>
+potete trovare le istruzioni per scaricare un filesystem e un elenco di esercizi da fare
 &nbsp;<BR>
 <P>
 &nbsp;<BR>
