--- a/precorsoLinux_esercizi.html
+++ b/precorsoLinux_esercizi.html
@@ -44,7 +44,7 @@ Per gli utenti Windows "Aprire un terminale" deve essere inteso come aprire un t
             <LI> Scegliete ''Salva con nome''. Il sistema vi propone una cartella in cui scaricare il file. Prendete nota di dove il file viene scaricato.
             <LI> Andate nella cartella home (<B>cd</B>)
             <LI> Create una nuova directory con il comando <B>mkdir precorso</B>
-            <LI> copiate il file test_FileSystem.tar.gz dalla cartella in cui &egrave; stato scaricato alla cartella <B>precorso</B> (<B>mv</B>. Pu&ograve; essere utile usare indirizzi assoluti.
+            <LI> copiate il file test_FileSystem.tar.gz dalla cartella in cui &egrave; stato scaricato alla cartella <B>precorso</B> (<B>mv</B>). Pu&ograve; essere utile usare indirizzi assoluti.
             <LI> Nella directory precorso, date il comando <B>tar -ztvf test_FileSystem.tar.gz</B><BR>
                  Il sistema vi mostra i file contenuti nell'archivio test_FileSystem.tar.gz
             <LI> Date il comando (in cosa differisce dal comando precedente?) <B>tar -zxvf test_FileSystem.tar.gz</B><BR>
