--- a/precorsoLinux_esercizi.html
+++ b/precorsoLinux_esercizi.html
@@ -139,7 +139,7 @@ Se &egrave; necessario (Per esempio sui Thin-client delle aule F e G su cui tutt
         <B>Humour</B>
     <LI> Dalla cartella in cui avete decompresso l'archivio date il comando <B>cp Humour/Ca* Humour/pluto</B>
         per copiare tutti i file in
-        <B>Humour</B> il cui nome inizi con <B>Ca</B> nella cartella <B>Humour</B>. Verificate con <B>ls</B> che
+        <B>Humour</B> il cui nome inizi con <B>Ca</B> nella cartella <B>Humour/pluto</B>. Verificate con <B>ls</B> che
         l'operazione sia andata a buon fine.
     <LI> cancellate la cartella <B>pluto</B> e tutti i file che contiene
     <LI> Tornate alla cartella in cui avete decompresso l'archivio
