--- a/precorsoLinux_esercizi.html
+++ b/precorsoLinux_esercizi.html
@@ -164,7 +164,7 @@ Se &egrave; necessario (Per esempio sui Thin-client delle aule F e G su cui tutt
         per mostrare sullo schermo il contenuto del file <B>phantom/COMANDI_GCC.txt</B>.<BR>
         Dalla cartella in cui avete decompresso l'archivio date il comando <B>grep lhapdf phantom/COMANDI_GCC.txt</B>.<BR>
         Il comando <B>grep</B> mostra tutte le linee nel file <B>phantom/COMANDI_GCC.txt</B> che contengono <B>lhapdf</B>
-    <LI> Usando <B>man grep</B> cercate l'effetto delle opzioni <B>-A</B> e <B>-B</B> su <B>grep</B>.
+    <LI> Usando <B>man grep</B> cercate l'effetto (e la sintassi) delle opzioni <B>-A</B> e <B>-B</B> su <B>grep</B>.
          Ripetete il comando <B>grep lhapdf phantom/COMANDI_GCC.txt</B> aggiungendo le opzioni <B>-A</B> e <B>-B</B>.
     <LI> Provate i comandi <B>head</B> e <B>tail</B> su <B>phantom/COMANDI_GCC.txt</B>
     <LI> I comandi di <B>bash</B> possono essere concatenati passando l'output del primo al secondo e cos&igrave;
