--- a/precorsoLinux_esercizi.html
+++ b/precorsoLinux_esercizi.html
@@ -155,7 +155,7 @@ Se &egrave; necessario (Per esempio sui Thin-client delle aule F e G su cui tutt
         cercare va chiuso fra virgolette:<BR>
         <B>find /usr/bin -name "cu*"</B><BR>
         <B>find ./ -name "*bash*"</B>
-    <LI> Date il comando <B>man find</B> e esaminate il risultato. Si, &egrave; un po' complicato
+    <LI> Date il comando <B>man find</B> ed esaminate il risultato. Si, &egrave; un po' complicato
     <LI> Nel vostro browser preferito cercate <B>linux find</B>. Aprite le prime pagine della risposta.
         Il web &egrave; una grande risorsa per tutti i problemi di programmazione. Non sempre &egrave;
         immediato trovare esattamente quello che serve.
